...
    android:background="@drawable/tutorpic">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginLinear"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
...
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxHolder"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/uidPWDLayout">

                <EditText
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/uemail"
                    android:layout_alignParentEnd="true"
                    android:hint="Username (case sensitive)"
                    android:layout_width="match_parent" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:layout_alignParentStart="true"
                    android:id="@+id/pwd"
                    android:layout_alignParentEnd="true"
                    android:hint="Password" />
            </LinearLayout>

            <CheckBox
                android:text="Remember Me"
...
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:id="@+id/loginbtnHolder"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <Button
                android:text="Login"
                android:id="@+id/lgn"
                android:layout_below="@+id/pwd"
                android:layout_marginTop="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
...
                android:textColor="@android:color/white" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linkHolder">

                <TextView
                    android:text="Register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lgn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:id="@+id/Rlink"
                    android:layout_weight="1"
                    android:textColor="#086A87" />
                <TextView
                    android:text="Forgot Your Password?"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
