<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
...
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/loginID">

        <Button
            android:id="@+id/loginTutee"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_boder"
            android:text="Login as Tutee"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/loginTuter"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_boder"
            android:text="Login as Tutor"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>

