<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="compsci290.edu.duke.tutor.loginregistration.RegisterActivity"
    android:background="@drawable/tutorpic">

    <RelativeLayout
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:id="@+id/logoHolder"
            android:layout_marginTop="10dp"
            android:layout_height="70dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/imageView" />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_below="@+id/uname"
                android:layout_alignParentStart="true"
                android:id="@+id/uemail"
                android:layout_alignParentEnd="true"
                android:hint="email@duke.edu" />

            <EditText
                android:id="@+id/uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="Username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="First Name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="Last Name"
                android:inputType="textPersonName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_below="@+id/uemail"
                android:id="@+id/pwd"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:hint="Password" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_below="@+id/pwd"
                android:id="@+id/pwds"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:hint="Re-enter Password" />

            <EditText
                android:id="@+id/uBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="Short Bio"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <Button
                android:text="Register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/pwd"
                android:layout_marginTop="46dp"
                android:id="@+id/btnregister"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/button_boder"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/emailverify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Waiting for Email verification"
                android:textAlignment="center"
                android:visibility="invisible" />

            <Button
                android:id="@+id/emailVerifyAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Send Email Verification Again"
                android:visibility="invisible"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
</ScrollView>