<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/button_request_tutor"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="4dp"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/profile_button_request_tutor" />

    <Button
        android:id="@+id/button_send_message"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/profile_button_send_message" />

    <Button
        android:id="@+id/button_send_venmo"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/profile_button_send_venmo" />
</LinearLayout>