...
            app:civ_border_width="2dp"
            app:civ_border_color="#ffffff"
            android:layout_below="@+id/linearLayout3"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/upload_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:minHeight="5dp"
            android:text="@string/upload"
            android:textSize="13sp"
...
