...
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_taken_semester">Year: %2$s</string>
    <string name="course_taken_grade">Grade: %2$s</string>
    <string name="course_taken_grade_v2">- Grade: %1$s</string>
    <string name="course_taken_semester_v2">- Semester: %1$s</string>
    <string name="course_taken_isTA_v2">- TA: %1$s</string>
    <string name="upload">Upload Profile Picture</string>

    <!--Main Activity-->

    <string name="request_sent_card_title">Request Sent</string>
    <string name="request_sent_session_duration"><b>Session duration</b>: %1$d</string>
    <string name="request_sent_time"><b>Sent at</b>: %1$s</string>
...
